test/tests/errors/error-file-non-storeable.sm
// true
// false
// false
/**/
/**/

program {
    file f withbuffer b: proc();
}